--- a/snake/global.css
+++ b/snake/global.css
@@ -1,46 +1,68 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
-
-* {
+*, *::after, *::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppings", sans-serif;
+    font-family: "Poppins", sans-serif;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
 }
 
 body {
-    background-color: #191919;
+    background-color: #09090b;
+    color: #fafafa;
+
     display: flex;
-    min-height: 100vh;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color: white;
+
+    position: relative;
 }
 
 canvas {
-    background-color: #111;
+    background-color: #121214;
+
+    border: 1px solid #27272a;
+    border-radius: 16px;
+
+    transition: scale 100ms;
+}
+
+canvas:hover {
+    scale: 1.0125;
 }
 
 .score {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+
     font-size: 1.8rem;
 }
 
 .score--value {
     font-weight: 700;
     font-size: 4.5rem;
+    
     display: block;
-    margin-top: -10px;
+    
+    margin-top: -.5rem;
 }
 
 .menu-screen {
     position: absolute;
+    z-index: 1;
+
     display: none;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
 }
 
 .game-over {
@@ -57,14 +79,20 @@ canvas {
 .btn-play {
     border: none;
     border-radius: 100px;
-    padding: 10px 15px 10px 12px;
+
+    padding: .5rem 1rem;
+    
     font-size: 1rem;
     font-weight: 600;
+    
     color: #333;
-    margin-top: 40px;
+    
+    margin-top: 2.5rem;
+    
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: .5rem;
+    
     cursor: pointer;
 }
