--- a/snake/global.css
+++ b/snake/global.css
@@ -1,50 +1,56 @@
 *, *::after, *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+
+  box-sizing: border-box;
 }
 
 html, body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+html, body, body * {
+  font-family: monospace;
 }
 
 body {
-    background-color: #09090b;
-    color: #fafafa;
+  background-color: #09090b;
+  color: #fafafa;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
-    position: relative;
+  position: relative;
 }
 
 canvas {
-    background-color: #121214;
+  background-color: #121214;
 
-    border: 1px solid #27272a;
-    border-radius: 16px;
+  border: 1px solid #27272a;
+  border-radius: 16px;
 
-    transition: scale 100ms;
+  transition: transform 100ms;
 }
 
 canvas:hover {
-    scale: 1.0125;
+  transform: scale(1.0125);
 }
 
 .score {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
+  position: absolute;
+  top: 5rem;
+  left: 50%;
 
-    font-size: 1.8rem;
+  transform: translateX(-50%);
+
+  font-size: 1.8rem;
 }
 
 .score--value {
